--- a/KanesaServise/package.json
+++ b/KanesaServise/package.json
@@ -2,6 +2,7 @@
   "name": "KanesaServise",
   "version": "0.0.1",
   "private": true,
+  "author": "Agus Prayogi",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
