--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,20 @@
   "name": "server",
   "version": "0.0.0",
   "private": true,
+  "author": "Agus Prayogi",
   "scripts": {
     "start": "node ./bin/www.js"
   },
   "dependencies": {
     "body-parser": "1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
     "jade": "^1.11.0",
     "morgan": "^1.10.0",
-    "cors": "^2.8.5",
     "mysql": "^2.18.1",
     "socket.io": "^2.3.0"
   }
